Project

General

Profile

Actions

Bug #9914

closed

posix_fadvise() does not work correctly with _LARGE_FILES on 32-bit AIX

Bug #9914: posix_fadvise() does not work correctly with _LARGE_FILES on 32-bit AIX

Added by ReiOdaira (Rei Odaira) over 12 years ago. Updated almost 12 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.2.0dev (2014-06-02 trunk 45270) [powerpc-aix7.1.0.0]
[ruby-core:62968]

Description

test_advise in test/ruby/test_io.rb fails on AIX.

[  1/170] TestIO#test_advise = 0.01 s
  1) Error:
TestIO#test_advise:
Errno::EINVAL: Invalid argument - /tmp/test_io20140606-7733390-1xgpc07
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2437:in `advise'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2437:in `block (4 levels) in test_advise'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2436:in `open'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2436:in `block (3 levels) in test_advise'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2435:in `each'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2435:in `block (2 levels) in test_advise'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2434:in `each'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2434:in `block in test_advise'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:1442:in `make_tempfile'
    /ss/home/rayod/Dev/Contribution/ruby-trunk-blue1/test/ruby/test_io.rb:2432:in `test_advise'

It is very strange, but the current AIX does not seem to support a 32-bit call to posix_fadvise() when _LARGE_FILES is defined.
http://www-01.ibm.com/support/docview.wss?uid=isg1IV56170

Until it is supported, we need this ugly patch to not call posix_fadvise()....

--- io.c        (revision 46310)
+++ io.c        (working copy)
@@ -8586,7 +8586,10 @@
     off = NIL_P(offset) ? 0 : NUM2OFFT(offset);
     l   = NIL_P(len)    ? 0 : NUM2OFFT(len);
 
-#ifdef HAVE_POSIX_FADVISE
+    /* AIX currently does not support a 32-bit call to posix_fadvise()
+     * if _LARGE_FILES is defined.
+     */
+#if defined(HAVE_POSIX_FADVISE) && !(defined(_AIX) && defined(_LARGE_FILES) && !defined(_ARCH_PPC64))
     return do_io_advise(fptr, advice, off, l);
 #else
     ((void)off, (void)l);      /* Ignore all hint */

FYI, detailed explanation follows:
The 2nd and 3rd arguemnts to posix_fadvise() are the off_t type. If _LARGE_FILES is defined, off_t is defined as long long int on the caller side. This means the 2nd and 3rd arguments are passed using two registers each on a 32-bit environment. However, the callee side does not support _LARGE_FILES, so off_t is assumed to be long int, which is passed using one register. As a result, the callee side can not receive a correct value for the 4th argument, int advice, throwing EINVAL.

Actions

Also available in: PDF Atom